--- a/package.json
+++ b/package.json
@@ -22,6 +22,13 @@
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.7",
-    "@babel/register": "^7.23.7"
+    "@babel/register": "^7.23.7",
+    "@eslint/js": "^9.7.0",
+    "eslint": "^9.7.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.8.0",
+    "prettier": "^3.3.3",
+    "typescript-eslint": "^7.16.1"
   }
 }
