--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon src/index.js"
+    "start:dev": "nodemon src/index.js",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -30,7 +31,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.8.0",
-    "husky": "^9.1.1",
+    "husky": "^8.0.0",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.3",
     "typescript-eslint": "^7.16.1"
@@ -47,7 +48,9 @@
     "*.{js,json,css,md}": [
       "prettier --single-quote --write",
       "git add"
-    ]
+    ],
+    "src/**/*.{js,html.css}": "prettier --write",
+    "src/**/*.js": "eslint"
   },
   "commitlint": {
     "extends": [
