--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME="SI-pro"
-DB_PASSWORD=root
-PORT=8080
-MONGODB_URI="mongodb+srv://chauhandhruv903:root@cluster0.bpu9v4a.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+DB_NAME=ateffawaz
+DB_PASSWORD=test123
 SESSION_SECRET=1234
+MONGODB_URI=mongodb://localhost:27017/EPITA
