--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.1",
+    "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
+    "pg-connection-string": "^2.6.4",
     "winston": "^3.13.1"
   },
   "devDependencies": {
