--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon src/index.js",
+    "start": "node dist/index.js",
+    "start:dev": "nodemon src/index.ts",
     "prepare": "husky install",
     "lint": "cross-env eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "cross-env eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix"
+    "lint:fix": "cross-env eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
+    "build": "tsc",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -34,15 +37,22 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.7.0",
+    "@types/node": "^16.11.7",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.8.0",
     "husky": "^8.0.0",
+    "jest": "^27.0.6",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.3",
-    "typescript-eslint": "^7.16.1"
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.3.5",
+    "@typescript-eslint/parser": "^4.28.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,md}": [
