--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon src/index.js",
+    "start": "node dist/index.js",
+    "start:dev": "nodemon src/index.ts",
     "prepare": "husky install",
     "lint": "cross-env eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "cross-env eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix"
+    "lint:fix": "cross-env eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
+    "build": "tsc",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -20,10 +23,11 @@
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.1",
+    "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
     "pg": "^8.11.3",
+    "pg-connection-string": "^2.6.4",
     "winston": "^3.13.1"
   },
   "devDependencies": {
@@ -33,15 +37,23 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.7.0",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.11.7",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.8.0",
     "husky": "^8.0.0",
+    "jest": "^27.0.6",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.3",
-    "typescript-eslint": "^7.16.1"
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.3.5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,md}": [
