refactor: trying a faster way to transfer files to ec2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,75 @@
+# name: Deployment Workflow
+
+# on:
+#   push:
+#     branches: [ dev ]
+
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v2
+
+#     - name: Set up Node.js
+#       uses: actions/setup-node@v2
+#       with:
+#         node-version: '16.x'
+
+#     - name: Cache Node.js modules
+#       uses: actions/cache@v2
+#       with:
+#         path: ~/.npm
+#         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+#         restore-keys: |
+#           ${{ runner.os }}-node-
+
+#     - name: Install dependencies
+#       run: npm ci --legacy-peer-deps
+
+#     - name: Run linter
+#       run: npm run lint
+
+#     - name: Run tests
+#       run: npm test
+
+#     - name: Build project
+#       run: npm run build
+
+#     - name: Decode SSH key
+#       run: echo "${{ secrets.EC2_SSH_KEY }}" | base64 --decode > /tmp/ec2-key.pem
+
+#     - name: Set permissions for SSH key
+#       run: chmod 600 /tmp/ec2-key.pem
+
+#     - name: Debug - Check SSH key file
+#       run: |
+#         ls -l /tmp/ec2-key.pem
+#         cat /tmp/ec2-key.pem
+
+#     - name: Start SSH Agent
+#       run: |
+#         eval "$(ssh-agent -s)"
+#         ssh-add /tmp/ec2-key.pem
+
+#     - name: Ensure deployment directory exists
+#       run: |
+#         ssh -o StrictHostKeyChecking=no -i /tmp/ec2-key.pem ec2-user@${{ secrets.EC2_INSTANCE_IP }} 'mkdir -p /home/ec2-user/app'
+
+#     - name: Transfer files to EC2
+#       run: |
+#         scp -o StrictHostKeyChecking=no -i /tmp/ec2-key.pem -r * ec2-user@${{ secrets.EC2_INSTANCE_IP }}:/home/ec2-user/app
+
+#     - name: Deploy application on EC2
+#       run: |
+#         ssh -o StrictHostKeyChecking=no -i /tmp/ec2-key.pem ec2-user@${{ secrets.EC2_INSTANCE_IP }} << 'EOF'
+#           cd /home/ec2-user/app
+#           npm install --legacy-peer-deps
+#           npm run build
+#           pm2 restart all || pm2 start npm --name "app" -- run start
+#         EOF
+
 name: Deployment Workflow
 
 on:
@@ -57,9 +129,17 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no -i /tmp/ec2-key.pem ec2-user@${{ secrets.EC2_INSTANCE_IP }} 'mkdir -p /home/ec2-user/app'
 
-    - name: Transfer files to EC2
+    - name: Transfer files to EC2 using rsync
       run: |
-        scp -o StrictHostKeyChecking=no -i /tmp/ec2-key.pem -r * ec2-user@${{ secrets.EC2_INSTANCE_IP }}:/home/ec2-user/app
+        rsync -avz -e "ssh -o StrictHostKeyChecking=no -i /tmp/ec2-key.pem" . ec2-user@${{ secrets.EC2_INSTANCE_IP }}:/home/ec2-user/app
+
+    - name: Install Node.js and pm2 on EC2
+      run: |
+        ssh -o StrictHostKeyChecking=no -i /tmp/ec2-key.pem ec2-user@${{ secrets.EC2_INSTANCE_IP }} << 'EOF'
+          curl -sL https://rpm.nodesource.com/setup_16.x | sudo bash -
+          sudo yum install -y nodejs
+          sudo npm install -g pm2
+        EOF
 
     - name: Deploy application on EC2
       run: |
