--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
       "noFallthroughCasesInSwitch": true,
       "skipLibCheck": true
     },
-    "include": ["src/**/*.ts", "src/boot/database/db_connect.js", "src/boot/setup.js", "src/index.js"],
+    "include": ["src/**/*.ts", "src/boot/database/db_connect.js", "src/boot/setup.js", "src/index.js", "src/middleware/notFound.js"],
     "exclude": ["node_modules"]
   }
