--- a/package.json
+++ b/package.json
@@ -46,9 +46,10 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@eslint/js": "^9.7.0",
     "@types/express": "^4.17.21",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^27.5.2",
     "@types/node": "^16.11.7",
     "@types/pg": "^8.11.6",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "cross-env": "^7.0.3",
@@ -58,9 +59,11 @@
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.8.0",
     "husky": "^8.0.0",
-    "jest": "^27.0.6",
+    "jest": "^29.0.0",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.3",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.5"
   },
